fix(css): spacing homogenous

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,6 +27,7 @@
   /* Font */
   --primary-font: "Cambria", "Times New Roman", serif;
   --line-size: 1px;
+  --line-spacing: 1rem;
   --font-weight-m: normal;
   --font-weight-l: bold;
   --font-weight-xl: 700;
@@ -63,8 +64,11 @@ ul {
 }
 
 li {
-  margin-bottom: 0.25rem;
   font-size: var(--font-size-s);
+}
+
+li + li {
+  margin-top: 0.5rem;
 }
 
 a {
@@ -270,55 +274,63 @@ button:focus-visible {
   font-size: var(--font-size-s);
 }
 
-/* ---------- Shared flex column pattern ---------- */
+/* ---------- Flex containers ---------- */
 
-.work-item,
-.education-item {
+/* ---------- Flex containers - LIST ---------- */
+
+.contacts-list,
+.skill-list,
+.works-list,
+.educations-list,
+.projects-list {
   display: flex;
   flex-direction: column;
-  gap: 0.25rem;
+}
+
+.contacts-list {
+  gap: 0.5rem;
+}
+
+.skill-list,
+.projects-list {
+  gap: 0.75rem;
+}
+
+.works-list,
+.educations-list {
+  gap: var(--line-spacing);
+}
+
+/* ---------- Flex containers - ITEM ---------- */
+
+.education-item,
+.work-item {
+  display: flex;
+  flex-direction: column;
 }
 
 .education-item {
   gap: 0.125rem;
-  margin-bottom: 0.5rem;
 }
 
 .work-item {
-  margin-bottom: 0.75rem;
+  gap: 0.25rem;
 }
 
 /* separation between work items */
+.education-item + .education-item,
 .work-item + .work-item {
   border-top: var(--line-size) solid var(--line-color);
-  padding-top: 0.5rem;
+  padding-top: var(--line-spacing);
 }
 
-/* ---------- Lists ---------- */
-
-.contact-list,
-.skill-list {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  gap: 0.5rem;
-  margin-left: 0;
-}
-
-.skill-list {
-  gap: 0.4rem;
-}
-
+/* icon alignment */
 .contact-item > a {
   display: flex;
   align-items: center;
 }
 
 /* ---------- Projects ---------- */
-
-.project-item {
-  margin-bottom: 0.5rem;
-}
 
 .project-description {
   margin-left: 0.5rem;
